// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested two level create input handling should work 1`] = `
"
    const { bars: barsInput, ...assignInput } = input;
    const foo = this.entityManager.create(Foo, {
    ...assignInput,
        
        
        
        
});
if (barsInput) {
        await foo.bars.loadItems();
        foo.bars.set(
            await Promise.all(
            barsInput.map(async (barInput) => {
                
    const { bazs: bazsInput, ...assignInput } = barInput;
    const bar = this.entityManager.assign(new Bar(), {
    ...assignInput,
        
        
        
        
});
if (bazsInput) {
        await bar.bazs.loadItems();
        bar.bazs.set(
            
            bazsInput.map((bazInput) => {
                
    
    const baz = this.entityManager.assign(new Baz(), {
    ...bazInput,
        
        
        
        
});





    
                return baz;
            })
            
        );
        }




    
                return bar;
            })
            )
        );
        }




    "
`;

exports[`nested two level update input handling should work 1`] = `
"
    const { bars: barsInput, ...assignInput } = input;
    foo.assign({
    ...assignInput,
        
        
        
        
});
if (barsInput) {
        await foo.bars.loadItems();
        foo.bars.set(
            await Promise.all(
            barsInput.map(async (barInput) => {
                
    const { bazs: bazsInput, ...assignInput } = barInput;
    const bar = this.entityManager.assign(new Bar(), {
    ...assignInput,
        
        
        
        
});
if (bazsInput) {
        await bar.bazs.loadItems();
        bar.bazs.set(
            
            bazsInput.map((bazInput) => {
                
    
    const baz = this.entityManager.assign(new Baz(), {
    ...bazInput,
        
        
        
        
});





    
                return baz;
            })
            
        );
        }




    
                return bar;
            })
            )
        );
        }




    "
`;
